# microsearch

./: .gitignore  LICENSE  README.md  app.py  feeds.txt  pyproject.toml  requirements.txt  tox.ini
app/: app.py
app/static/css/: styles.css
app/templates/: about.html  base.html  navbar.html  results.html
microsearch/: engine.py
scripts/: download_content.py
src/microsearch/: engine.py
templates/: results.html  search.html
tests/: test_engine.py
