[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microsearch"
version = "0.0.1"
authors = [
  { name="Alex Molas", email="alexmolasmartin@gmail.com" },
]
description = "A minimal search engine in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp==3.9.1",
  "beautifulsoup4==4.12.2",
  "fastapi==0.108.0",
  "feedparser==6.0.11",
  "Jinja2==3.1.3",
  "pandas==2.1.4",
  "pyarrow==15.0.0",
  "uvicorn==0.25.0",
]

[project.urls]
Homepage = "https://github.com/alexmolas/microsearch"
